# Credit-Scoring-Model

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
data/processed/: processed_credit_data.csv
models/: decision_tree.pkl  logistic_regression.pkl  random_forest.pkl
notebooks/: 01_EDA.ipynb  02_featureengineering.ipynb  03_model_training.ipynb
outputs/reports/: metrics_summary.json
src/: evaluate.py  features.py  preprocessing.py  train.py  utils.py
